--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         HomePage = () => {
 
-            window.location.href = "https://loronetablanca.my-app.site"
+            window.location.href = "https://loroneta-blanca.es"
 
         }
 
